feat: Record frequent donators
Also fix Privat TX desc.
Also, refactor and split into classes